--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ project(aesd-assignments)
 # Students can also add paths to their own test files using a ../ prefix to
 # reference this working directory
 set(AUTOTEST_SOURCES
-    test/assignment1/Test_hello.c
-    test/assignment1/Test_assignment_validate.c
+#    test/assignment1/Test_hello.c
+#    test/assignment1/Test_assignment_validate.c
     test/assignment3/Test_systemcalls.c
 )
 # A list of all files containing test code that is used for assignment validation
